# rgb-matrix-4096

./: CMakeLists.txt  run.sh
src/: album_art.cpp  main.cpp
